Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/IP_InvoiceQuery__c.object-meta.xml
<CustomObject>
    <label>Invoice Query</label>
    <nameField>
        <displayFormat>INQ-{000000}</displayFormat>
        <label>Invoice Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>