Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Account__c.field-meta.xml
<CustomField>
    <fullName>IP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Queries</relationshipLabel>
    <relationshipName>Invoice_Queries</relationshipName>
    <type>Lookup</type>
</CustomField>