Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Actioned__c.field-meta.xml
<CustomField>
    <fullName>IP_Actioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actioned</label>
    <type>Checkbox</type>
</CustomField>