Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_ActionedBy__c.field-meta.xml
<CustomField>
    <fullName>IP_ActionedBy__c</fullName>
    <label>Actioned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>