Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_ActionedDate__c.field-meta.xml
<CustomField>
    <fullName>IP_ActionedDate__c</fullName>
    <label>Actioned Date</label>
    <type>Date</type>
</CustomField>