Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_BranchCode__c.field-meta.xml
<CustomField>
    <fullName>IP_BranchCode__c</fullName>
    <label>Branch Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>