Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_BranchName__c.field-meta.xml
<CustomField>
    <fullName>IP_BranchName__c</fullName>
    <label>Branch Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>