Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Client__c.field-meta.xml
<CustomField>
    <fullName>IP_Client__c</fullName>
    <label>Client</label>
    <length>40</length>
    <type>Text</type>
</CustomField>