Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Contact__c.field-meta.xml
<CustomField>
    <fullName>IP_Contact__c</fullName>
    <label>Contact</label>
    <length>27</length>
    <type>Text</type>
</CustomField>