Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>IP_Date_Raised__c</fullName>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>