Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_DateRaised__c.field-meta.xml
<CustomField>
    <fullName>IP_DateRaised__c</fullName>
    <label>Date Raised OLD</label>
    <type>DateTime</type>
</CustomField>