Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>IP_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>