Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_DueDate__c.field-meta.xml
<CustomField>
    <fullName>IP_DueDate__c</fullName>
    <label>Due Date OLD</label>
    <type>DateTime</type>
</CustomField>