Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Entity__c.field-meta.xml
<CustomField>
    <fullName>IP_Entity__c</fullName>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>