Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>IP_InvoiceDate__c</fullName>
    <label>Invoice Date OLD</label>
    <type>DateTime</type>
</CustomField>