Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>IP_InvoiceNumber__c</fullName>
    <label>Invoice Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>