Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_QueryDescription__c.field-meta.xml
<CustomField>
    <fullName>IP_QueryDescription__c</fullName>
    <label>Query Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>