Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/fields/IP_Site__c.field-meta.xml
<CustomField>
    <fullName>IP_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Invoice Queries</relationshipLabel>
    <relationshipName>Invoice_Queries</relationshipName>
    <type>Lookup</type>
</CustomField>