Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IP_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>