Frankbelford/uatv1ba/force-app/main/default/objects/IP_InvoiceQuery__c/listViews/Created_last_7_days.listView-meta.xml
<ListView>
    <fullName>Created_last_7_days</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:11</value>
    </filters>
    <label>Created last 7 days</label>
</ListView>